# paper-ocr

./: .gitignore  README.md  api.py  convert_pdf.py  dev.ipynb  pyproject.toml  requirements.txt
pdftolatex/: block_detector.py  latex.py  pdf.py  segment_pdf.py  utils.py
static/: index.html
